# asio_stream_compressor

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  asio__stream__compressor_8h.html  classasio__stream__compressor_1_1compressor.html  classasio__stream__compressor_1_1compressor__statistics.html  classasio__stream__compressor_1_1detail_1_1async__read__some__operation.html  classasio__stream__compressor_1_1detail_1_1async__write__some__operation.html  classasio__stream__compressor_1_1detail_1_1compression__core.html  classasio__stream__compressor_1_1detail_1_1initiate__async__read__some.html  classasio__stream__compressor_1_1detail_1_1initiate__async__write__some.html  classasio__stream__compressor_1_1zstd__error__category__impl.html  compression__core_8h.html  compressor__statistics_8h.html  conanfile.py  defines_8h.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_67ff5667102c834139692ace21e5d8b5.html  dir_86868b0d389834a1ac1c05f5107fcbcd.html  dir_ef3b2545113449f8f25e623a543d64e3.html  errors_8h.html  files.html  index.html  modules.html  namespaceasio__stream__compressor.html  namespaceasio__stream__compressor_1_1detail.html  namespaceboost.html  namespaceboost_1_1asio.html  namespaces.html  namespacestd.html  pages.html  read__operation_8h.html  searchdata-v1.js  (+7 more)
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  spell.cmake  variables.cmake
conan_recipe/: conanfile.py
conan_recipe/test_package/: CMakeLists.txt  conanfile.py  example.cpp
example/: CMakeLists.txt  basic_usage.cpp
example/detail/: echo.h
include/asio_stream_compressor/: asio_stream_compressor.h  errors.h  statistics.h
include/asio_stream_compressor/detail/: compression_core.h  compressor_statistics.h  defines.h  read_operation.h  write_operation.h  zstd_error_condition.h
ports/asio_stream_compressor/: portfile.cmake
test/: CMakeLists.txt
test/source/: asio_stream_compressor_api_test.cpp  asio_stream_compressor_test.cpp
